      not found adjusts the default \env{R_RD4PDF} to not use it (with a
      warning, since it is needed for high-quality rendering of manuals).
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item \command{R CMD INSTALL} will now do a test load for all
      sub-architectures for which code was compiled (rather than just
      the primary sub-architecture).
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{stack()} now gives an error if no vector column is
      selected, rather than returning a 1-column data frame (contrary to
      its documentation).

      \item \code{summary.mlm()} did not handle objects where the
      formula had been specified by an expression.  (Reported by
      Helios de Rosario Martinez).

      \item \code{tools::deparseLatex(dropBraces=TRUE)} could drop
      text as well as braces.

      \item \code{colormodel = "grey"} (new in \R 2.14.0))
      did not always work in \code{postscript()} and \code{pdf()}.

      \item \code{file.append()} could return \code{TRUE} for failures.
      (\PR{14727})

      \item \code{gzcon()} connections are no longer subject to garbage
      collection: it was possible for this to happen when unintended
      (e.g. when calling \code{load()}).

      \item \code{nobs()} does not count zero-weight observations for
      \code{glm()} fits, for consistency with \code{lm()}.  This affects
      the \code{BIC()} values reported for such \code{glm()} fits.
      (Spotted by Bill Dunlap.)

      \item \code{options(warn = 0)} failed to end a (C-level) context
      with more than 50 accumulated warnings.  (Spotted by Jeffery
      Horner.)

      \item The internal \code{plot.default()} code did not do sanity
      checks on \code{cex}, so invalid input could cause problems.
      (Reported by Ben Bolker.)

      \item \code{anyDuplicated(<array>, MARGIN=0)} no longer fails.
      (Reported by Hervé Pagès.)
    }
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.14.0}{